// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load plugins Loads plugins defined with an object but without an option key 1`] = `
Array [
  Object {
    "id": "Plugin component-page-creator",
    "name": "component-page-creator",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin component-layout-creator",
    "name": "component-layout-creator",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin internal-data-bridge",
    "name": "internal-data-bridge",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin dev-404-page",
    "name": "dev-404-page",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin prod-404",
    "name": "prod-404",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin query-runner",
    "name": "query-runner",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "name": "TEST",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
  },
  Object {
    "id": "Plugin default-site-plugin",
    "name": "default-site-plugin",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "d41d8cd98f00b204e9800998ecf8427e",
  },
]
`;

exports[`Load plugins load plugins for a site 1`] = `
Array [
  Object {
    "id": "Plugin component-page-creator",
    "name": "component-page-creator",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin component-layout-creator",
    "name": "component-layout-creator",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin internal-data-bridge",
    "name": "internal-data-bridge",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin dev-404-page",
    "name": "dev-404-page",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin prod-404",
    "name": "prod-404",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin query-runner",
    "name": "query-runner",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "1.0.0",
  },
  Object {
    "id": "Plugin default-site-plugin",
    "name": "default-site-plugin",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "version": "d41d8cd98f00b204e9800998ecf8427e",
  },
]
`;
